Fullpost: Fix Visit Site link overlapping content (#9071)

--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -116,8 +116,8 @@
 
 	@include breakpoint( ">660px" ) {
 		border: 0;
-		top: 47px;
-		right: 0;
+		position: absolute;
+		z-index: 0;
 	}
 }
 
